# DepReach

./: .gitignore  LICENSE  MANIFEST.in  README.md  depreach.py  pyproject.toml  requirements.txt  sarif.json
.github/workflows/: release.yml
docs/: README.md
graphql_db/: client.py  models.py  server.py
scripts/: __init__.py  bom.py  cache.py  composition_analysis.py  detect_type.py  html_report.py  reachability.py  sarif_report.py  update_db.py
tests/: test_bom.py  test_composition_analysis.py  test_depreach.py  test_detect_type.py  test_reachability.py
